--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
           <div class="row" >
             <div class="super col-lg-3 col-md-6">
-                <img src="static/speckled-trout.png"  class="my_pic_clear"  >
+                <img src="/speckled-trout.png"  class="my_pic_clear"  >
                 <a>20" Spotted Trout</a></div>
 
             <div class="super col-lg-3 col-md-6">
