--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
           <div class="row" >
             <div class="super col-lg-3 col-md-6">
-                <img src="/speckled-trout.png"  class="my_pic_clear"  >
-                <a>20" Spotted Trout</a></div>
+                <img src="speckled-trout.png"  class="my_pic_clear"  >
+                <a>20" Spotted Troutt</a></div>
 
             <div class="super col-lg-3 col-md-6">
                 <img src="/static/black-drum.png"  class="my_pic_clear" >
