--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                 <a>20" Spotted Troutt</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="/static/black-drum.png"  class="my_pic_clear" >
+                <img src="static/black-drum.png"  class="my_pic_clear" >
                 <a>19" Black Drum</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="/static/flounder.png" class="my_pic_clear">
+                <img src="/flounder.png" class="my_pic_clear">
                 <a>17" Flounder</a></div>
 
             <div class="super col-lg-3 col-md-6">
