--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--    CSS stylesheet-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--    <link rel="stylesheet" href="/m_els/A_First/static/style.css">-->
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="static/style.css">
     <!--    <link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
 
 
@@ -46,7 +46,7 @@
                                Fish-U-Were-Here</a>
 
 
-                        <img src="/static/boatman.png"  style="height: 180px" class="my_pic_clear" >
+                        <img src="static/boatman.png"  style="height: 180px" class="my_pic_clear" >
         <!--            <td><img src="/m_els/A_First/static/boatman.png" style="height: 80px" ></td>-->
                     </div>
 
@@ -131,7 +131,7 @@
 
           <div class="row" >
             <div class="super col-lg-3 col-md-6">
-                <img src="speckled-trout.png"  class="my_pic_clear"  >
+                <img src="static/speckled-trout.png"  class="my_pic_clear"  >
                 <a>20" Spotted Troutt</a></div>
 
             <div class="super col-lg-3 col-md-6">
@@ -139,11 +139,11 @@
                 <a>19" Black Drum</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="/flounder.png" class="my_pic_clear">
+                <img src="static/flounder.png" class="my_pic_clear">
                 <a>17" Flounder</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="/static/red-drum.png" class="my_pic_clear">
+                <img src="static/red-drum.png" class="my_pic_clear">
                 <a>28" Red Drum</a></div>
 
           </div>
