--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" href="static/style.css">
     <!--<link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
-        <link rel="icon" href="/static/favicon.ico">
+        <link rel="icon" href="static/favicon.ico">
     </head>
 
     <body>
@@ -20,11 +20,11 @@
                 <h2>Here's the TEXAS SUPER SLAM</h2>
 
                     <h6><strong>caught inshore near Corpus Christi</strong></h6>
-                    <a href="/static/grand_slam.jpg" target="_blank"><img class="hobbies_slam" src="/static/grand_slam.jpg"></a>
+                    <a href="static/grand_slam.jpg" target="_blank"><img class="hobbies_slam" src="/static/grand_slam.jpg"></a>
                         <p>click pic to enlarge</p>
 
                 <h2>return to fishing</h2>
-                    <p><img src="/static/speckled-trout.png" class="my_pic_clear" alt ="fish pic"></p>
+                    <p><img src="static/speckled-trout.png" class="my_pic_clear" alt ="fish pic"></p>
 
             <div class="container-fluid">
 
@@ -34,28 +34,28 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a> a few from Lake Somerville</a>
-                            <p><img src="/static/1205211011a_HDR.jpg"></p>
+                            <p><img src="static/1205211011a_HDR.jpg"></p>
                             </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Shamrock cove Mustand Island</a>
-                            <p><img src="/static/shamrock.jpg" class="my_pic_clear"></p>
+                            <p><img src="static/shamrock.jpg" class="my_pic_clear"></p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>sample from Lake Somerville</a>
-                            <p><img src="/static/white_bass.jpg" class="my_pic_clear"></p>
+                            <p><img src="static/white_bass.jpg" class="my_pic_clear"></p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Let's do it again Lake Somerville</a>
-                            <p><img src="/static/canoe_lake.jpg" class="my_pic_clear"></p>
+                            <p><img src="static/canoe_lake.jpg" class="my_pic_clear"></p>
                                 </div>
 
 
-                            <p><img src="/static/blackFish.png" class="my_pic_clear"></p>
+                            <p><img src="static/blackFish.png" class="my_pic_clear"></p>
 
-                            <p><a href="/static/tracker-pro-170-50-hp-only-8-hour-6.jpg" target="_blank">Back to the water</a></p>
+                            <p><a href="static/tracker-pro-170-50-hp-only-8-hour-6.jpg" target="_blank">Back to the water</a></p>
 
                     </div>
 
