--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
                       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
                       crossorigin="anonymous">
 
-                <link rel="stylesheet" href="/static/style.css">
+                <link rel="stylesheet" href="static/style.css">
 
-                <link rel="icon" href="/static/favicon.ico">
+                <link rel="icon" href="static/favicon.ico">
     </head>
 
     <body>
@@ -48,7 +48,7 @@
                     <a href="http://127.0.0.1:5000/"> Return Home</a>
         </section>
 
-        <img src="/static/catch.png"  class="my_pic_clear"  >
+        <img src="static/catch.png"  class="my_pic_clear"  >
 
 
 
