edit static link

--- a/hobbies.html
+++ b/hobbies.html
@@ -20,7 +20,7 @@
                 <h2>Here's the TEXAS SUPER SLAM</h2>
 
                     <h6><strong>caught inshore near Corpus Christi</strong></h6>
-                    <a href="static/grand_slam.jpg" target="_blank"><img class="hobbies_slam" src="/static/grand_slam.jpg"></a>
+                    <a href="static/grand_slam.jpg" target="_blank"><img class="hobbies_slam" src="static/grand_slam.jpg"></a>
                         <p>click pic to enlarge</p>
 
                 <h2>return to fishing</h2>
