update home link

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,8 @@
                 <input type="submit" name="conditions" required>
 
             </form>
-                    <a href="http://127.0.0.1:5000/"> Return Home</a>
+<!--                     <a href="http://127.0.0.1:5000/"> Return Home</a> -->
+            <a href="https://ehworks.github.io/fishy/"> Return Home</a>
         </section>
 
         <img src="static/catch.png"  class="my_pic_clear"  >
