--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
 
-                                <li class="nav-item">
+<!--                                 <li class="nav-item">
                                     <a  class="nav-link" href="login.html">Login</a>
-                                </li>
+                                </li> -->
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="hobbies.html" >My Hobbies</a>
