--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
             <h3>first but not foremost is : </h3>
             <p>Describe your catch : </p>
 
-            <form action="/login" method="post">
+<!--             <form action="/login" method="post"> -->
 <!--            <form action="/login" method="post" enctype="text/plain">-->
-<!--            <form action="mailto:info@day_32_practice@yahoo.com" method="post" enctype="text/plain">-->
+           <form action="mailto:info@day_32_practice@yahoo.com" method="post" enctype="text/plain">
 
                 <label> Your name </label>
                 <input type="text" placeholder="name" name="username" required><br>
