--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
             <p>Describe your catch : </p>
 
 <!--             <form action="/login" method="post"> -->
-<!--            <form action="/login" method="post" enctype="text/plain">-->
-           <form action="mailto:info@day_32_practice@yahoo.com" method="post" enctype="text/plain">
+           <form action="/login" method="post" enctype="text/plain">
+<!--            <form action="mailto:info@day_32_practice@yahoo.com" method="post" enctype="text/plain"> -->
 
                 <label> Your name </label>
                 <input type="text" placeholder="name" name="username" required><br>
