--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
                 <label> Your name </label>
                 <input type="text" placeholder="name" name="username" required><br>
 <!--                 <input type="text" placeholder="name" name="username">-->
-                <label> Password </label>
-                <input type="text" placeholder="password" name="password"><br>
+<!--                 <label> Password </label> -->
+<!--                 <input type="text" placeholder="password" name="password"><br> -->
 
                 <label> Your Fish </label>
                 <input type="text" placeholder="type of fish"  name="typefish" required><br>
