--- a/hobbies.html
+++ b/hobbies.html
@@ -81,7 +81,7 @@
 
 <!--                                            RETURN TO HOME PAGE                         -->
 <!--                                 <a href="http://127.0.0.1:5000/"> Return Home</a> -->
-                                    <a href="https://ehworks.github.io/fishy/" Return Home</a>
+<!--                                     <a href="https://ehworks.github.io/fishy/" Return Home</a> -->
             </div>
         </div>
     </body>
