--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </body>
     <footer>
         
-    <p>© 2022 M Elson</p>
+<!--     <p>© 2022 M Elson</p> -->
     <p>© {{year}} M Elson</p>
     </footer>
 
