--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         
 <!--     <p>© 2022 M Elson</p> -->
     <p>© {{year}} M Elson</p>
+        <p>© {{year}} M Elson</p>
     </footer>
 
     </html>
