--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     </body>
     <footer>
         
-<!--     <p>© 2022 M Elson</p> -->
+    <p>© 2022 M Elson</p>
     <p>© {{year}} M Elson</p>
-        <p>© {{year}} M Elson</p>
+       
     </footer>
 
     </html>
