--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                                 </li>
 
                                 <li class="nav-item">
+                                     <a class="nav-link" href="weather_codes.html" >Weather Details Today</a>
+                                </li>
+
+                                <li class="nav-item">
                                     <a class="nav-link" href="https://tpwd.texas.gov/fishboat/fish/action/reptform2.php?
                                         %20%20%20%20%20%20%20lake=SOMERVILLE&archive=latest&yearcat=current&Submit=Go"
                                         target="_blank">Condition at Somerville</a>
