--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     </body>
     <footer>
         
-<!--     <p>© 2022 M Elson</p> -->
-    <p>© {{year}} M Elson</p>
+    <p>© 2022 M Elson</p>
+<!--     <p>© {{year}} M Elson</p> -->
        
     </footer>
 
