--- a/hobbies.html
+++ b/hobbies.html
@@ -33,8 +33,9 @@
                     <div class="row">
 
                             <div class="super col-lg-3 col-md-6">
-                                <a> a few from Lake Somerville</a>
-                            <p><img src="static/1205211011a_HDR.jpg"></p>
+                                <a>Morning Catch Lake Somerville</a>
+                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+<!--                             <p><img src="static/1205211011a_HDR.jpg"></p> -->
                             </div>
 
                             <div class="super col-lg-3 col-md-6">
@@ -43,12 +44,12 @@
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
-                                <a>sample from Lake Somerville</a>
-                            <p><img src="static/white_bass.jpg" class="my_pic_clear"></p>
-                                </div>
+                                         <a>Early Morning Lake Somerville</a>
+                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+      ?
 
                             <div class="super col-lg-3 col-md-6">
-                                <a>Let's do it again Lake Somerville</a>
+                                <a>Headed out Lake Somerville</a>
                             <p><img src="static/canoe_lake.jpg" class="my_pic_clear"></p>
                                 </div>
 
