--- a/hobbies.html
+++ b/hobbies.html
@@ -34,8 +34,7 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Morning Catch Lake Somerville</a>
-                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
-<!--                             <p><img src="static/1205211011a_HDR.jpg"></p> -->
+                            <p><img src="src="/static/0716220849.jpg" class="my_pic_clear"></p>
                             </div>
 
                             <div class="super col-lg-3 col-md-6">
@@ -45,8 +44,8 @@
 
                             <div class="super col-lg-3 col-md-6">
                                          <a>Early Morning Lake Somerville</a>
-                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
-      ?
+                            <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+      
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Headed out Lake Somerville</a>
