--- a/hobbies.html
+++ b/hobbies.html
@@ -34,7 +34,7 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Morning Catch Lake Somerville</a>
-                            <p><img src="src="static/0716220849.jpg" class="my_pic_clear"></p>
+                            <p><img src="static/0716220849.jpg" class="my_pic_clear"></p>
                             </div>
 
                             <div class="super col-lg-3 col-md-6">
