--- a/hobbies.html
+++ b/hobbies.html
@@ -44,8 +44,8 @@
 
                             <div class="super col-lg-3 col-md-6">
                                          <a>Early Morning Lake Somerville</a>
-                            <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p>
-      
+                            <p><img src="static/0603220607_HDR.jpg" class="my_pic_clear"></p>
+<!--                                                 0603220607_HDR.jpg     -->
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Headed out Lake Somerville</a>
