--- a/hobbies.html
+++ b/hobbies.html
@@ -35,18 +35,17 @@
                             <div class="super col-lg-3 col-md-6">
                                 <a>Morning Catch Lake Somerville</a>
                                 <p><img src="static/morningcatch.jpg" class="my_pic_clear"></p>
-<!--                             <p><img src="static/0716220849.jpg" class="my_pic_clear"></p> -->
                             </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Shamrock cove Mustand Island</a>
-                            <p><img src="static/shamrock.jpg" class="my_pic_clear"></p>
-                                </div>
+                                <p><img src="static/shamrock.jpg" class="my_pic_clear"></p>
+                            </div>
 
                             <div class="super col-lg-3 col-md-6">
-                                         <a>Early Morning Lake Somerville</a>
-                            <p><img src="static/0603220607_HDR.jpg" class="my_pic_clear"></p>
-<!--                                                 0603220607_HDR.jpg     -->
+                                <a>Early Morning Lake Somerville</a>
+                                <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+                            </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Headed out Lake Somerville</a>
