--- a/weather_codes.html
+++ b/weather_codes.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Conditions</title>
-<!--
-          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-              crossorigin="anonymous"> -->
+
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+                rel="stylesheet"
+                integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+                crossorigin="anonymous">
 
 
             <link rel="stylesheet" href="static/style.css">
             <link rel="icon" href="static/favicon.ico">
-            <link href="data.txt">
+<!--             <link href="data.txt"> -->
 
 </head>
 <body>
