--- a/weather_codes.html
+++ b/weather_codes.html
@@ -12,7 +12,7 @@
 
             <link rel="stylesheet" href="static/style.css">
             <link rel="icon" href="static/favicon.ico">
-<!--             <link href="data.txt"> -->
+            <link href="data.txt">
 
 </head>
 <body>
