--- a/weather_codes.html
+++ b/weather_codes.html
@@ -34,7 +34,7 @@ Weather
 </object>
 <!--<iframe id="txtviewer" name="weather" height="600" width="400" src="data.txt"></iframe>-->
 
-<img src="/static/catch.png"  class="my_pic_clear"  >
+<img src="static/catch.png"  class="my_pic_clear"  >
 
 
 </body>
