--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <!--    CSS stylesheet-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--    <link rel="stylesheet" href="/m_els/A_First/static/style.css">-->
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="/static/style.css">
     <!--    <link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
 
 
@@ -42,11 +42,15 @@
 
                 <nav class="navbar  navbar-expand-lg navbar-dark bg-primary">
                     <div class="col-lg-6 col-md-4">
-                            <a class="navbar-brand" href="https://tpwd.texas.gov/regulations/outdoor-annual/fishing/">
+<!--                            < img src="/static/aransaspass.jpg/">-->
+<!--                            <a class="navbar-brand" href="https://tpwd.texas.gov/regulations/outdoor-annual/fishing/">-->
+                            <a class="navbar-brand"
+                    href="/static/aransaspass.jpg" target="_blank">
                                Fish-U-Were-Here</a>
 
 
-                        <img src="static/boatman.png"  style="height: 180px" class="my_pic_clear" >
+
+                        <img src="/static/boatman.png"  style="height: 180px" class="my_pic_clear" >
         <!--            <td><img src="/m_els/A_First/static/boatman.png" style="height: 80px" ></td>-->
                     </div>
 
@@ -61,24 +65,22 @@
 
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
 
+<!--                                <li class="nav-item">-->
+<!--                                    <a  class="nav-link" href="login.html">Login</a>-->
+<!--                                </li>-->
+
                                 <li class="nav-item">
                                     <a class="nav-link" href="hobbies.html" >My Hobbies</a>
                                 </li>
 
                                 <li class="nav-item">
-                                     <a class="nav-link" href="weather_codes.html" >Weather Details Today</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="https://tpwd.texas.gov/fishboat/fish/action/reptform2.php?
-                                        %20%20%20%20%20%20%20lake=SOMERVILLE&archive=latest&yearcat=current&Submit=Go"
-                                        target="_blank">Condition at Somerville</a>
+                                     <a class="nav-link" href="fishing_conditions.html" >Fishing Conditions Today</a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://tpwd.texas.gov/regulations/outdoor-annual/fishing/"
                                        target="_blank">Fish-U-Can-keep</a>
-<!--                                                            https://tpwd.texas.gov/regulations/outdoor-annual/fishing/-->
+
                                 </li>
 
                             </ul>
@@ -96,12 +98,12 @@
     <!-- ######################################################################################## -->
 
     <div class="continue">
-         <h1>To Be Continued</h1>
+         <h1>The Adventure Continues</h1>
 
 
 
         <h2><em>Michael <strong>Says</strong></em></h2>
-            <p>pay attention to what is not said</p>
+            <p>A day without fishing is like a day not fishing</p>
     <!--   </section>-->
         <hr>
         <h3>Just to start : </h3>
@@ -109,6 +111,7 @@
             <ul>
                 <li>things are not as they seem</li>
                 <li>what you see is what you get</li>
+                <li>something said here is to fill space</li>
             </ul>
 
 
@@ -127,19 +130,19 @@
 
           <div class="row" >
             <div class="super col-lg-3 col-md-6">
-                <img src="static/speckled-trout.png"  class="my_pic_clear"  >
-                <a>20" Spotted Troutt</a></div>
+                <img src="/static/speckled-trout.png"  class="my_pic_clear"  >
+                <a>20" Spotted Trout</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="static/black-drum.png"  class="my_pic_clear" >
+                <img src="/static/black-drum.png"  class="my_pic_clear" >
                 <a>19" Black Drum</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="static/flounder.png" class="my_pic_clear">
+                <img src="/static/flounder.png" class="my_pic_clear">
                 <a>17" Flounder</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="static/red-drum.png" class="my_pic_clear">
+                <img src="/static/red-drum.png" class="my_pic_clear">
                 <a>28" Red Drum</a></div>
 
           </div>
@@ -155,14 +158,8 @@
                     <li><a> Port Aransas channel: 33" black drum </a></li>
                     <li><a> NC offshore:  12 ring-tail</a></li>
                 </ul>
+                <p>© 2022 M Elson</p>
 
         </div>
     </body>
-    <footer>
-        
-    <p>© 2022 M Elson</p>
-<!--     <p>© {{year}} M Elson</p> -->
-       
-    </footer>
-
     </html>
