--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <script src="https://use.fontawesome.com/257b2535a1.js"></script>
 
-         <link rel="icon" href="/static/favicon.ico">
+         <link rel="icon" href="static/favicon.ico">
     </head>
 
     <body>
@@ -42,16 +42,16 @@
 
                 <nav class="navbar  navbar-expand-lg navbar-dark bg-primary">
                     <div class="col-lg-6 col-md-4">
-<!--                            < img src="/static/aransaspass.jpg/">-->
+<!--                            < img src="static/aransaspass.jpg/">-->
 <!--                            <a class="navbar-brand" href="https://tpwd.texas.gov/regulations/outdoor-annual/fishing/">-->
                             <a class="navbar-brand"
-                    href="/static/aransaspass.jpg" target="_blank">
+                    href="static/aransaspass.jpg" target="_blank">
                                Fish-U-Were-Here</a>
 
 
 
-                        <img src="/static/boatman.png"  style="height: 180px" class="my_pic_clear" >
-        <!--            <td><img src="/m_els/A_First/static/boatman.png" style="height: 80px" ></td>-->
+                        <img src="static/boatman.png"  style="height: 180px" class="my_pic_clear" >
+        <!--            <td><img src="m_els/A_First/static/boatman.png" style="height: 80px" ></td>-->
                     </div>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -130,19 +130,19 @@
 
           <div class="row" >
             <div class="super col-lg-3 col-md-6">
-                <img src="/static/speckled-trout.png"  class="my_pic_clear"  >
+                <img src="static/speckled-trout.png"  class="my_pic_clear"  >
                 <a>20" Spotted Trout</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="/static/black-drum.png"  class="my_pic_clear" >
+                <img src="static/black-drum.png"  class="my_pic_clear" >
                 <a>19" Black Drum</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="/static/flounder.png" class="my_pic_clear">
+                <img src="static/flounder.png" class="my_pic_clear">
                 <a>17" Flounder</a></div>
 
             <div class="super col-lg-3 col-md-6">
-                <img src="/static/red-drum.png" class="my_pic_clear">
+                <img src="static/red-drum.png" class="my_pic_clear">
                 <a>28" Red Drum</a></div>
 
           </div>
