--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <!--    CSS stylesheet-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--    <link rel="stylesheet" href="/m_els/A_First/static/style.css">-->
-        <link rel="stylesheet" href="/static/style.css">
-    <!--    <link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
+    <!--    <link rel="stylesheet" href="m_els/A_First/static/style.css">-->
+        <link rel="stylesheet" href="static/style.css">
+    <!--    <link rel="icon" href="m_els/A_First/static/favicon.ico">-->
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
