--- a/fishing_conditions.html
+++ b/fishing_conditions.html
@@ -20,7 +20,7 @@
     <!--    CSS stylesheet-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!--        <link rel="stylesheet" href="/m_els/A_First/static/style.css">-->
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="static/style.css">
     <!--    <link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
 
 
@@ -30,7 +30,7 @@
 
         <script src="https://use.fontawesome.com/257b2535a1.js"></script>
 
-         <link rel="icon" href="/static/favicon.ico">
+         <link rel="icon" href="static/favicon.ico">
     </head>
 
     <body>
@@ -46,7 +46,7 @@
                     <div class="col-lg-6 col-md-4">
 
 
-                            <a  class="my_clear_pic" href ="/static/trentriver.jpg" target="_blank"><img src="/static/trentriver.jpg" >
+                            <a  class="my_clear_pic" href ="static/trentriver.jpg" target="_blank"><img src="static/trentriver.jpg" >
 
                             </a>
 
@@ -103,7 +103,7 @@
 
                 <p>Trent River at Neuse</p>
 
- <p><img src="/static/blackFish.png" class="my_pic_clear"></p>
+ <p><img src="static/blackFish.png" class="my_pic_clear"></p>
 
     </body>
     </html>
