--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
               crossorigin="anonymous">
 
 
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="/static/style.css">
     <!--<link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
         <link rel="icon" href="/static/favicon.ico">
     </head>
@@ -34,7 +34,7 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a> Morning catch Lake Somerville</a>
-                            <p><img src="/static/morningcatch.jpg"></p>
+                            <p><img src="/static/morningcatch.jpg" class="my_pic_clear"></p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
