--- a/hobbies.html
+++ b/hobbies.html
@@ -70,7 +70,7 @@
                                 <td>spinning reel</td><td> </td><td>skill</td><td>⭐⭐⭐⭐</td>
                             </tr>
                             <tr>
-                                <td>fly rod</td><td> </td><td>skill</td><td>⭐*⭐</td>
+                                <td>fly rod</td><td> </td><td>skill</td><td>⭐⭐⭐</td>
                             </tr>
                     </tbody>
 
