--- a/hobbies.html
+++ b/hobbies.html
@@ -34,26 +34,31 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a> Morning catch Lake Somerville</a>
-                            <p><img src="static/morningcatch.jpg" class="my_pic_clear"></p>
+<!--                             <p><img src="static/morningcatch.jpg" class="my_pic_clear"></p> -->
+                            <p><a href="static/morningcatch.jpg" target="_blank"><img src="static/morningcatch.jpg" class="my_pic_clear"></a> </p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Shamrock Cove Mustang Island</a>
-                            <p><img src="static/shamrock.jpg" class="my_pic_clear"></p>
+<!--                             <p><img src="static/shamrock.jpg" class="my_pic_clear"></p> -->
+                            <p><a href="static/shamrock.jpg" target="_blank"><img src="static/shamrock.jpg" class="my_pic_clear"></a></p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Early Morning Lake Somerville</a>
-                            <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+<!--                             <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p> -->
+                           <p><a href="static/sunrisesomerville.jpg" target="_blank"><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></a></p>
                                  </div>
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Heading out on  Lake Somerville</a>
-                            <p><img src="static/canoe_lake.jpg" class="my_pic_clear"></p>
+<!--                             <p><img src="static/canoe_lake.jpg" class="my_pic_clear"></p> -->
+                            <p><a href="static/canoe_lake.jpg" target="_blank"><img src="static/canoe_lake.jpg" class="my_pic_clear"></a></p>
                                 </div>
 
 
-                            <p><img src="static/blackFish.png" class="my_pic_clear"></p>
+<!--                             <p><img src="static/blackFish.png" class="my_pic_clear"></p> -->
+                         <p><a href="static/partofslam.jpg" target="_blank"><img src="static/blackFish.png" class="my_pic_clear"></a></p>
 
                             <p><a href="static/tracker-pro-170-50-hp-only-8-hour-6.jpg" target="_blank">Back to the water</a></p>
 
