--- a/fishing_conditions.html
+++ b/fishing_conditions.html
@@ -98,9 +98,10 @@
         </section>
 
     <!-- ######################################################################################## -->
-
-                        <p class="lawson"><em>  Lawson Creek at Trent River</em></p>
-
+                    <a class="lawson">
+                        <p><em>  Lawson Creek at Trent River</em></p>
+                    </a>
+          
                     <a class="continue">
                         <p><img src="static/blackFish.png" class="my_pic_clear"></p>
                     </a>
