--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
     <!-- ######################################################################################## -->
 
     <div class="continue">
-         <h1>The Adventure Continues</h1>
-
+<!--          <h1>The Adventure Continues</h1> -->
+<h1> <a href="/static/rand_pic/somer_rise_15.jpg" target="_blank">
+          The Adventure Continues</a></h1>
 
 
         <h2><em>Michael <strong>Says</strong></em></h2>
