--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="continue">
 <!--          <h1>The Adventure Continues</h1> -->
-<h1> <a img src="static/rand_pic/somer_rise_15.jpg" target="_blank">
+<h1> <a img src="static/somer_rise_15.jpg" target="_blank">
           The Adventure Continues</a></h1>
 
 
