--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
         <div class="notables">
           <h3>notables</h3>
                 <ul>
-
-                    <li><a> Port Aransas channel: 33" black drum </a></li>
+                    <li><a class="navbar-brand"
+                    href="static/33 inch black drum.jpg" target="_blank">
+                              Port Aransas channel: 33" black drum</a></li>
                     <li><a> NC offshore:  12 ring-tail</a></li>
                 </ul>
                 <p>© 2022 M Elson</p>
