--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                 <ul>
                     <li><a class="navbar-brand"
                     href="static/33 inch black drum.jpg" target="_blank">
-                              Port Aransas channel: 33" black drum</a></li>
+                              Port Aransas channel: 33" black drum -copy1</a></li>
+                   
                     <li><a> NC offshore:  12 ring-tail</a></li>
                 </ul>
                 <p>© 2022 M Elson</p>
