--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
           <h3>notables</h3>
                 <ul>
                     <li><a class="navbar-brand"
-                    href="static/33 inch black drum.jpg" target="_blank">
-                              Port Aransas channel: 33" black drum -copy1</a></li>
+                    href="static/33 inch black drum - Copy1.jpg" target="_blank">
+                              Port Aransas channel: 33" Black Drum</a></li>
                    
                     <li><a> NC offshore:  12 ring-tail</a></li>
                 </ul>
