--- a/hobbies.html
+++ b/hobbies.html
@@ -75,7 +75,7 @@
                                 <td>spinning reel</td><td> </td><td>skill</td><td>⭐⭐⭐⭐</td>
                             </tr>
                             <tr>
-                                <td>fly rod</td><td> </td><td>skill</td><td>⭐⭐⭐</td>
+                                <td>super fly rod</td><td> </td><td>skill</td><td>⭐⭐⭐</td>
                             </tr>
                     </tbody>
 
