--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                  
                               Port Aransas channel: 33" Black Drum</a></li>
                    
-                    <li><a> NC offshore:  12 ring-tail</a></li>
+                    <li><a> NC offshore inshore:  12 ring-tail</a></li>
                 </ul>
                 <p>© 2022 M Elson</p>
 
