--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                    
                     <li><a> NC offshore inshore:  12 ring-tail</a></li>
                 </ul>
-                <p>© 2022 M Elson</p>
+                <p>© {{year}} M Elson</p>
 
         </div>
     </body>
