--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                    
                     <li><a> NC offshore inshore:  12 ring-tail</a></li>
                 </ul>
-                <p>© {{year}} M Elson</p>
+<!--                 <p>© {{year}} M Elson</p> -->
+                <p>Copyright &copy; <script>document.write(new Date().getFullYear())
+                </script> M Elson  All Rights Reserved</p>
 
         </div>
     </body>
