--- a/hobbies.html
+++ b/hobbies.html
@@ -85,7 +85,8 @@
                 </section>
 
 <!--                                            RETURN TO HOME PAGE                         -->
-                                <a  href="https://ehworks.github.io/fishy/"> Return Home</a>
+<!--                                 <a href="https://ehworks.github.io/fishy/"> Return Home</a> -->
+                                <a href="https://ehworks.github.io/fishy/" class="btn btn-info" role="button">Return Home</a>
                 
                                 <p>Copyright &copy; <script>document.write(new Date().getFullYear())
                                 </script> M Elson  All Rights Reserved</p>
