--- a/index.html
+++ b/index.html
@@ -163,8 +163,12 @@
                     <li><a> NC offshore inshore:  12 ring-tail</a></li>
                 </ul>
 <!--                 <p>© {{year}} M Elson</p> -->
-                <p>Copyright &copy; <script>document.write(new Date().getFullYear())
-                </script> M Elson  All Rights Reserved</p>
+            
+               <div class="copyright">
+                    <p> &copy; <script>document.write(new Date().getFullYear())
+                    </script> M Elson  </p>
+                </div>
+               
 
         </div>
     </body>
