--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 </li>
                                 
                                  <li class="nav-item">
-                                     <a class="nav-link" href="http://melson.pythonanywhere.com/login/" >Test Site for comments</a>
+                                     <a class="nav-link" href="https://melson.pythonanywhere.com/" >Test Site for comments</a>
                                 </li>
 
                             </ul>
