--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- #######################################################-->
 
     <div class="inshore">
-        <h2><strong> Texas Super Slam</strong></h2>
+        <h2><a href="static/grand_slam.jpg" target="_blank"><strong> Texas Super Slam</strong></h2>
 
     </div>
 
@@ -136,19 +136,19 @@
           <div class="row" >
             <div class="super col-lg-3 col-md-6">
                 <img src="static/speckled-trout.png"  class="my_pic_clear"  >
-                <a>20" Spotted Trout</a></div>
+                <a href="static/grand_slam.jpg" target="_blank">20" Spotted Trout</a></div>
 
             <div class="super col-lg-3 col-md-6">
                 <img src="static/black-drum.png"  class="my_pic_clear" >
-                <a>19" Black Drum</a></div>
+                <a href="static/grand_slam.jpg" target="_blank">19" Black Drum</a></div>
 
             <div class="super col-lg-3 col-md-6">
                 <img src="static/flounder.png" class="my_pic_clear">
-                <a>17" Flounder</a></div>
+                <a href="static/grand_slam.jpg" target="_blank">17" Flounder</a></div>
 
             <div class="super col-lg-3 col-md-6">
                 <img src="static/red-drum.png" class="my_pic_clear">
-                <a>28" Red Drum</a></div>
+                <a href="static/grand_slam.jpg" target="_blank">28" Red Drum</a></div>
 
           </div>
 
