--- a/hobbies.html
+++ b/hobbies.html
@@ -57,7 +57,7 @@
                                 </div>
                             
                             <div class="super col-lg-3 col-md-6">
-                                <a>Low tide Malaquite Beach/a>
+                                <a>Low tide Malaquite Beach</a>
 <!--                             <p><img src="static/lowTide.jpg" class="my_pic_clear"></p> -->
                             <p><a href="static/lowTide.jpg" target="_blank"><img src="static/lowTide.jpg" class="my_pic_clear"></a></p>
                                 </div>
