--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <ul>
                 <li>things are not as they seem</li>
                 <li>what you see is what you get</li>
-                <li href="life/gameoflife.html" target="_blank">game of life space</li>
+                <li><a href="life/gameoflife.html" target="_blank">game of life space</a></li>
             </ul>
 
 
