--- a/life/gameoflife.html
+++ b/life/gameoflife.html
@@ -16,7 +16,7 @@
         <button id="start">start</button>
         <button id="clear">clear</button>
         <button id="random">random</button>
-        <button id="rules"><a href=life/ruleOfLife.html>rules</a></button>
+        <button id="rules"><a href="ruleOfLife.html>rules</a></button>
     </div>
 
     <script src="code.js"></script>
