--- a/life/ruleOfLife.html
+++ b/life/ruleOfLife.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rules of Life</title>
-
+<link rel="stylesheet" href="life.css">
 
 </head>
 
@@ -11,11 +11,20 @@
 
 <p>
 There are some rules which as follows :
+<ul>
 
-    A cell with 0 or 1 neighbor dies because of underpopulation.
-    When a cell with 4 or more neighbors dies because of overpopulation.
-    If any empty space has exactly 3 cells then a new cell is born in that empty space.
+ <li>   A cell with 0 or 1 neighbor dies because of underpopulation.
+   </li>
+<li> 
+When a cell with 4 or more neighbors dies because of overpopulation.
+</li>
+<li>
+    
+If any empty space has exactly 3 cells then a new cell is born in that empty space.
+</li>
+<li>
     If none of the above rules apply then the space does not change a live cell remains alive, and an empty space is still empty.
+</li>
 </p>
 
 </body>
