--- a/life/gameoflife.html
+++ b/life/gameoflife.html
@@ -18,6 +18,27 @@
         <button id="random">random</button>
 <!--         <button id="rules"><a href="ruleOfLife.html>rules</a></button> -->
     </div>
+    <div>
+    <p>
+        There are some rules which as follows :
+        <ul>
+
+         <li>   A cell with 0 or 1 neighbor dies because of underpopulation.
+           </li>
+        <li> 
+        When a cell with 4 or more neighbors dies because of overpopulation.
+        </li>
+        <li>
+
+        If any empty space has exactly 3 cells then a new cell is born in that empty space.
+        </li>
+        <li>
+            If none of the above rules apply then the space does not change a live cell remains alive, and an empty space is still empty.
+        </li>         
+    </p>
+
+    </div>
+        
 
     <script src="code.js"></script>
 
