--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
             <ul>
                 <li>things are not as they seem</li>
-                <li>what you see is what you get</li>
-                <li><a href="life/gameoflife.html" target="_blank">game of life space</a></li>
+                <li><a href="music-master/music.html" target="_blank">Relax with your own tunes</a></li>
+                <li><a href="life/gameoflife.html" target="_blank">Here is the game of life space</a></li>
             </ul>
 
 
