added link to youtube example

--- a/life/gameoflife.html
+++ b/life/gameoflife.html
@@ -34,7 +34,13 @@
         </li>
         <li>
             If none of the above rules apply then the space does not change a live cell remains alive, and an empty space is still empty.
-        </li>         
+        </li>  
+
+        <li>
+            Example of what you can creeate, use link below:
+            https://www.youtube.com/watch?v=C2vgICfQawE
+        </li>
+            
     </p>
 
     </div>
