--- a/life/gameoflife.html
+++ b/life/gameoflife.html
@@ -40,7 +40,7 @@
             Example of what you can creeate, use link below:
         </li> 
         <ul>  
-            https://www.youtube.com/watch?v=C2vgICfQawE
+            <link href= "https://www.youtube.com/watch?v=C2vgICfQawE">
         </ul>
             
     </p>
