--- a/fishing_conditions.html
+++ b/fishing_conditions.html
@@ -67,19 +67,19 @@
                                 <li class="nav-item">
                                     <a class="nav-link"
                                        href="https://deq.nc.gov/about/divisions/marine-fisheries/public-information-and-education/coastal-fishing-information/recreational-fishing-reports"
-                                       target="_blank" >North Carolina Fishing Report</a>
+                                       target="_blank" rel="noopener noreferrer" >North Carolina Fishing Report</a>
                                 </li>
 
                                 <li class="nav-item">
                                      <a class="nav-link" href="https://tpwd.texas.gov/fishboat/fish/action/reptform2.php?
                                     water=Saltwater&lake=Rockport&Submit=View+Report&archive=latest&yearcat=2022"
-                                        target="_blank">Conditions at Rockport TX </a>
+                                        target="_blank" rel="noopener noreferrer" >Conditions at Rockport TX </a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://tpwd.texas.gov/fishboat/fish/action/reptform2.php?
                                         %20%20%20%20%20%20%20lake=SOMERVILLE&archive=latest&yearcat=current&Submit=Go"
-                                        target="_blank">Condition at Somerville TX</a>
+                                        target="_blank" rel="noopener noreferrer" >Condition at Somerville TX</a>
                                 </li>
 
 
