--- a/hobbies.html
+++ b/hobbies.html
@@ -56,7 +56,7 @@
                             <p><a href="static/canoe_lake.jpg" target="_blank"><img src="static/canoe_lake.jpg" class="my_pic_clear"></a></p>
                                 </div>
                             
-                            <div class="super col-lg-3 col-md-6"> -->
+                            <div class="super col-lg-3 col-md-6">
                                 <a>Low tide Malaquite Beach</a>
 <!--                             <p><img src="static/lowTide.jpg" class="my_pic_clear"></p> -->
                            <p><a href="static/lowTide.jpg" target="_blank"><img src="static/lowTide.jpg" class="my_pic_clear"></a></p> -->
